add event in calender and edit

--- a/store/parts/surah.ipynb
+++ b/store/parts/surah.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "  'صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا الضَّالِّينَ']}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,33 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'surah': 113,\n",
-       " 'ayah': 4,\n",
-       " 'text': 'وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ',\n",
-       " 'accumulator': 105}"
+       "{'surah': 36,\n",
+       " 'ayah': 7,\n",
+       " 'text': 'لَقَدْ حَقَّ الْقَوْلُ عَلَى أَكْثَرِهِمْ فَهُمْ لَا يُؤْمِنُونَ',\n",
+       " 'accumulator': 216}"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### calculate middle ayah\n",
-    "def getMiddle(fromVerse='112:1', toVerse='114:6'):\n",
+    "def getMiddle(fromVerse='35:45', toVerse='36:12'):\n",
     "    fromSurah, fromAyah, fromVerse = getVerse(fromVerse)\n",
     "    toSurah, toAyah, toVerse = getVerse(toVerse)\n",
     "    # get all ayahs\n",
     "    allVerses = []\n",
     "    for surahI in range(fromSurah - 1, toSurah):\n",
     "        toInThisSurah = toAyah if surahI == toSurah - 1 else maxAyah(surahI)\n",
-    "        for ayahI in range(fromAyah - 1, toInThisSurah):\n",
+    "        fromInThisSurah = fromAyah if surahI == fromSurah - 1 else 1\n",
+    "        for ayahI in range(fromInThisSurah - 1, toInThisSurah):\n",
     "            surah, ayah, text = getVerse(f'{surahI + 1}:{ayahI + 1}')\n",
     "            allVerses.append({\n",
     "                'surah': surah,\n",
@@ -294,6 +295,7 @@
     "                'text': text\n",
     "            })\n",
     "    # calc accumulator\n",
+    "    # print(allVerses)\n",
     "    calcAccumulator = CalculateAccumulator()\n",
     "    allVerses = list(map(calcAccumulator.calc, allVerses))\n",
     "    # get the middle verse\n",
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'verse_key': '1:1', 'juz_number': 1},\n",
+       " {'verse_key': '1:2', 'juz_number': 1},\n",
+       " {'verse_key': '1:3', 'juz_number': 1},\n",
+       " {'verse_key': '1:4', 'juz_number': 1},\n",
+       " {'verse_key': '1:5', 'juz_number': 1},\n",
+       " {'verse_key': '1:6', 'juz_number': 1},\n",
+       " {'verse_key': '1:7', 'juz_number': 1}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def removeMiddle(page):\n",
+    "    def pageM(verse):\n",
+    "        if 'isMiddle' in verse:\n",
+    "            del verse['isMiddle']\n",
+    "        return verse\n",
+    "    page = list(map(pageM, page))\n",
+    "    return page\n",
+    "\n",
+    "newVersesPerPage = list(map(removeMiddle, versesPerPage['pages']))\n",
+    "newVersesPerPage[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +369,12 @@
     "    page = list(map(pageM, page))\n",
     "    return page\n",
     "\n",
-    "newVersesPerPage = list(map(addMiddle, versesPerPage['pages']))"
+    "newVersesPerPage = list(map(addMiddle, newVersesPerPage))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:50:36) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
